crates/reap-pm-live/tests/ui/product_requires_explicit_model.rs
use reap_pm_live::PmProduct;

fn main() {
    let _ = PmProduct::<()>::new;
}
